[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "flask-api-key-decorator"
version = "0.1.0"
description = "Simple Flask decorator for requiring an API key"
authors = [
    {name = "@lumpenspace", email = "lumpenspace@gmail.com"},
]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "flask",
]

packages = [
    {name = "flask_api_key_decorator", include = ["flask_api_key_decorator"]},
]

[project.urls]
homepage = "https://github.com/yourusername/flask-api-key-decorator"
repository = "https://github.com/yourusername/flask-api-key-decorator"
documentation = "https://yourusername.github.io/flask-api-key-decorator"

[project.scripts]
test = "pytest"

